# polars-pyspark-pandas-comparison

./: .gitignore  .python-version  README.md  benchmark.py  data_generation.py  experiment.ipynb  pyproject.toml  results_polars.parquet  results_pyspark.parquet
results/: analysis.ipynb  analysis_100M.ipynb  analysis_100M.py  analysis_insights.txt  results_pandas.parquet  results_polars.parquet  results_polars_1_100M.parquet  results_polars_20241108.parquet  results_polars_<1M_20241108.parquet  results_polars_gpu.parquet  results_polars_gpu_100M.parquet  results_polars_gpu_1_10M.parquet  results_polars_gpu_join.parquet  results_pyspark.parquet  results_pyspark_1-10M.parquet  streaming_batch_size_evaluation.parquet
tabular_titans/: benchmark.py  data_generation.py  utils.py
