[tool.poetry]
name = "tabular_titans"
version = "0.1.0"
description = "Comparison of three popular data processing frameworks"
authors = ["Bauke Brenninkmeijer <bauke.brenninkmeijer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.2"
pandas = "^2.2.2"
polars = "^1.6.0"
setuptools = "^74.0.0"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
rich = "^13.8.1"
multiprocess = "^0.70.17"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
ruff = "^0.6.9"
fire = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
